--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,16 +30,21 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
+        <!--
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
+        -->
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/index">Home</a>
+            <a href="{{ site.baseurl }}/cv">CV</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
+            <!--
             <a href="{{ site.baseurl }}/about">About</a>
+            -->
           </nav>
         </header>
       </div>
@@ -49,6 +54,7 @@
       {{ content }}
     </div>
 
+    <!--
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
@@ -56,6 +62,7 @@
         </footer>
       </div>
     </div>
+    -->
 
     {% include analytics.html %}
   </body>
