--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/index">Home</a>
-            <a href="{{ site.baseurl }}/cv">CV</a>
+            <a href="/documents/HeewonHwang_CV.pdf">CV</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <!--
             <a href="{{ site.baseurl }}/about">About</a>
