--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-        <!--
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-        -->
+          <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a> -->
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
@@ -42,8 +40,9 @@
           <nav>
             <a href="{{ site.baseurl }}/index">Home</a>
             <a href="/documents/HeewonHwang_CV.pdf">CV</a>
-            <!-- <a href="{{ site.baseurl }}/research">Research</a> -->
+            <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/blog">Blog</a>
+            <a href="{{ site.baseurl }}/resources">Resources</a>
             <!--
             <a href="{{ site.baseurl }}/about">About</a>
             -->
