--- a/style.scss
+++ b/style.scss
@@ -281,10 +281,10 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid #189CC4;
     padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
+    color: #189CC4;
+    font-size: 1em;
     font-style: italic;
   }
 
