fix md notation

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
   background: $white;
-  font: 15px $helveticaNeue;
+  font: 14px $helveticaNeue;
   color: $darkGray;
 }
 
@@ -70,11 +70,12 @@ h2 {
 
 h3 {
   font-size: 18px;
+  color: #189CC4;
 }
 
 h4 {
   font-size: 16px;
-  color: $gray;
+  color: #189CC4;
 }
 
 h5 {
