--- a/style.scss
+++ b/style.scss
@@ -108,10 +108,12 @@ li{
 
 ul {
   list-style-type: disc;
+  color: gray;
 }
 
 ol {
   list-style-type: decimal;
+  color: gray;
 }
 
 ol ul, ul ol, ul ul, ol ol {
@@ -119,8 +121,24 @@ ol ul, ul ol, ul ul, ol ol {
 }
 
 ul ul, ol ul {
-  list-style-type: circle;
+  list-style-type: disc;
 }
+
+// ul li::before {
+//   content: "•"; /* Unicode bullet character */
+//   color: gray; /* Set bullet color */
+//   display: inline-block; 
+//   width: 1em; /* Adjust width to match padding */
+//   margin-right: 0.5em; /* Space between bullet and text */
+// }
+
+// ol li::before {
+//   content: "•"; /* Unicode bullet character */
+//   color: gray; /* Set bullet color */
+//   display: inline-block; 
+//   width: 1em; /* Adjust width to match padding */
+//   margin-right: 0.5em; /* Space between bullet and text */
+// }
 
 em, i {
   font-style: italic;
