--- a/style.scss
+++ b/style.scss
@@ -108,7 +108,6 @@ li{
 
 ul {
   list-style-type: none;
-  padding-left: 0;
 }
 
 ol {
@@ -121,17 +120,18 @@ ol ul, ul ol, ul ul, ol ol {
 
 ul ul, ol ul {
   list-style-type: none;
-  padding-left: 0;
 }
 
 ul li::before {
   content: "•"; /* Unicode bullet character */
   color: rgb(188, 188, 188); /* Set bullet color */
-  font-size: 1.3em; /* Optional: Adjust bullet size */
+  font-size: 2em; /* Optional: Adjust bullet size */
+  margin-right: 0.5em; /* Space between bullet and text */
 }
 
 ol li::marker {
   color: rgb(188, 188, 188); /* Set bullet color */
+  margin-right: 0.5em; /* Space between bullet and text */
 }
 
 em, i {
