--- a/style.scss
+++ b/style.scss
@@ -283,9 +283,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid #d55f20;
+    border-left: 2px solid #189CC4;
     padding: 0.1em 1em;
-    color: #d55f20;
+    color: #189CC4;
     font-size: 1em;
     font-style: italic;
   }
