--- a/style.scss
+++ b/style.scss
@@ -89,11 +89,11 @@ p.big {
 }
 
 a {
-  color: #325CC0;
+  color: #4d83c5;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
-    color: #325CC0;
+    color: #4d83c5;
   }
 }
 
@@ -261,7 +261,7 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: #325CC0;
+      color: #4d83c5;
     }
   }
 }
@@ -283,9 +283,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid #325CC0;
+    border-left: 2px solid #4d83c5;
     padding: 0.1em 1em;
-    color: #325CC0;
+    color: #4d83c5;
     font-size: 1em;
     font-style: italic;
   }
