font and style changes

--- a/style.scss
+++ b/style.scss
@@ -223,15 +223,15 @@ img {
   margin: 0em;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 25px;
-  letter-spacing: 0px;
+  font-family: "Garamond", $helveticaNeue, serif;
+  // font-weight: 300;
+  font-size: 16px;
 }
 
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
+  font-family: "Garamond", $helveticaNeue, serif;
   font-size: 14px;
 
   @include mobile {
@@ -242,7 +242,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: "Garamond", $helveticaNeue, serif;
   font-size: 14px;
 
   @include mobile {
