--- a/style.scss
+++ b/style.scss
@@ -225,7 +225,7 @@ img {
   cursor: pointer;
   font-family: "Garamond", serif;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 30px;
 }
 
 .site-description {
@@ -256,8 +256,8 @@ nav {
     margin-left: 20px;
     color: $darkGray;
     text-align: right;
-    font-weight: 300;
-    letter-spacing: 0px;
+    // font-weight: 300;
+    // letter-spacing: 0px;
 
     @include mobile {
       margin: 0 10px;
