--- a/style.scss
+++ b/style.scss
@@ -225,7 +225,7 @@ img {
   cursor: pointer;
   font-family: "Garamond", serif;
   font-weight: 500;
-  font-size: 30px;
+  font-size: 27px;
 }
 
 .site-description {
@@ -256,7 +256,7 @@ nav {
     margin-left: 20px;
     color: $darkGray;
     text-align: right;
-    // font-weight: 300;
+    font-weight: 300;
     // letter-spacing: 0px;
 
     @include mobile {
