--- a/style.scss
+++ b/style.scss
@@ -244,6 +244,7 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 16px;
+  font-weight: 400;
 
   @include mobile {
     float: left;
@@ -257,6 +258,7 @@ nav {
     color: $darkGray;
     font-family: $helveticaNeue;
     font-size: 16px;
+    font-weight: 400;
     text-align: right;
 
     @include mobile {
